--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,2 +1,5 @@
-<p>This is my First webpage!</p>
+<h1>My first webpage</h1>
+<h2>Written with the guidance of Epicodus</h2>
+
+<p>This is my first webpage!</p>
 <p> Isnt it great?</p>
