--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -3,3 +3,12 @@
 
 <p>This is my first webpage!</p>
 <p> Isnt it great?</p>
+
+<p> Here are some things im going to learn about coding:</p>
+
+<ul>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+  <li>And a lot more!</li>
+</ul>
